--- a/resume_ic.tex
+++ b/resume_ic.tex
@@ -48,9 +48,10 @@
 
 \section{Personal Details}
 \begin{tabular}{rl}
+Current Position: & Staff Software Engineer, Codeplay Software \\
+Locale: & Edinburgh, UK (Citizenship: Indian)\\
 Date of Birth: & 4 December 1990 \\
-Address / Contact: & Mobile: +91 9591847397 \\
-Portfolio / Blog: & \href{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}{http://clweb.csa.iisc.ernet.in/res15/kumudha.kn/}\\
+Portfolio / Blog: & \href{https://kumudhan.github.io/}{https://kumudhan.github.io/}\\
 email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\ 
 %& \href{mailto:kumudha@iisc.ac.in}{kumudha@iisc.ac.in}\\
 \end{tabular}
@@ -62,8 +63,12 @@ email: & \href{mailto:kumudhakn@gmail.com}{kumudhakn@gmail.com}\\
 \section{Work Experience}
 
 \begin{tabular}{r|p{12cm}}
-July 2018 to Current & Senior Software Engineer at Samsung Research India, Bangalore \\
-& \emph{IoT Division}. \small {Tizen studio infrastructure 
+September 2019 to Current & Staff Software Engineer at Codeplay Software, Edinburgh\\
+& \emph{AI/DNN Compilation and Performance Engineering}. \small {SYCL, CUDA, OpenCL } \\
+& \\
+
+July 2018 to July 2019 & Senior Software Engineer at Samsung Research India, Bangalore \\
+{(1 year, 1 month)}& \emph{IoT Division}. \small {Tizen studio infrastructure 
 development and maintenance}\\
 & \\
 
@@ -120,9 +125,13 @@ July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
 %	Publications
 %----------------------------------------------------------------------------------------
 \section{Publications}
+\textbf{Cross-Platform Performance Portability of DNN Models using SYCL} \\
+\small{Mehdi Goli, Kumudha Naraimshan, Ruyman Reyes et. al.} \\
+\small{ Performance, Portability, and Productivity in HPC Forum (P3HPC) @ Supercomputing (SC) 2020}
+
 \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach}\\
 \small{Vinay Vasista, Kumudha KN, Siddharth Bhat, Uday Bondhugula} \\
-\small{The International Conference for High Performance Computing, Networking, Storage and Analysis. \\ SuperComputing 2017} \\
+\small{SuperComputing (SC) 2017, The Intl. Conf. for High Performance Computing, Networking, Storage and Analysis. \\ } \\
 
 
 \textbf{An Empirical Comparative Study and Optimization of the Hadoop Scheduler} \\
@@ -130,7 +139,6 @@ July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
 \small{International Conference on Emerging Trends in Electrical, Electronics and 
 Communication Technologies \\ ICECIT, 2012, pgs 350-356,2012}
 \\
-\newpage
 %----------------------------------------------------------------------------------------
 %	SOFTWARE and Hardware proficiency
 %----------------------------------------------------------------------------------------
@@ -160,8 +168,6 @@ HARDWARE  & \tabitem Programming and Architecture of Accelerators \\
 & \tabitem 8051 based Micro-controller Programming \\
 &\\
 \end{tabular}
-\\
-\\
 
 %----------------------------------------------------------------------------------------
 %	PROJECTS 
@@ -182,7 +188,7 @@ valuable. Technologies used: C/C++, python and pgfplot.\\
 & \\
 & \\
 & \textbf{Optimizing Dense Matrix Computations with Polymage } \\
-& \hspace{25em} \textbf{[Under Preparation]}\\
+& \hspace{25em} \textbf{[Under Submission]}\\
 & \setlength{\leftskip}{0.4cm}
 Matrix computations constitute an important part in domains like digital signal
 processing, scientific computing, media processing and many others. A Domain
@@ -200,22 +206,22 @@ execution. McVM is a
 virtual machine implemented in C/C++ which implements a significant subset of
 the MATLAB language.This work evaluates the overheads associated with the execution of
 MATLAB scripting languages under McVM virtual machine environment. Technologies used: C/C++ and Intel PIN tool.\\
-& \\
-& \textbf{Parallelize and optimize the CAFFE DNN framework on a multicore CPU}\\
-& \setlength{\leftskip}{0.4cm}
-CAFFE is one of the early frameworks for deep neural networks written in C++. CAFFE accepts a configuration in protobuf containing the neural network topology and can perform training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism. Technology used: C/C++ and Intel vTune profiler.\\
 
 \end{tabular}
 
 \section{Projects}
 \begin{tabular}{rp{13cm}}
-Projects at IISc& \textbf{Optimizations for Image Processing Pipeline} \\
+& \textbf{Parallelize and optimize the CAFFE DNN framework on a multicore CPU}\\
+& \setlength{\leftskip}{0.4cm}
+CAFFE is one of the early frameworks for deep neural networks written in C++. CAFFE accepts a configuration in protobuf containing the neural network topology and can perform training, testing and inference. CAFFE has support for executing  on both CPUs and GPUs. We optimize the CPU version of Caffe to improve its performance using loop transforms for extracting parallelism. Technology used: C/C++ and Intel vTune profiler.\\
+& \\
+& \textbf{Optimizations for Image Processing Pipeline} \\
 & \setlength{\leftskip}{0.4cm}
 Hand optimization of image processing pipelines like unsharp mask, harris corner detection, max\_filter, etc on multi-core CPUs. These optimizations included loop permutation, tiling for cache locality and parallelism and were done in C/C++. Technology used: C/C++ and Intel vTune profiler.\\
 &\\
-& \textbf{Integrated Heterogeneous System (IHS) Architecture with shared Die Stacked DRAM Cache} \\
+& \textbf{Integrated Heterogeneous System (IHS) Architecture with shared die-stacked DRAM Cache} \\
 & \setlength{\leftskip}{0.4cm}
-Modern processors chips integrate multi-core CPUs and general purpose accelerator GPUs on the same die. These IHS processors have high bandwidth requirement and large working sets.\\
+Modern processors chips integrate multi-core CPUs and general purpose GPUs on the same die. These IHS processors have high bandwidth requirement and large working sets.\\
 & \setlength{\leftskip}{0.4cm} 
 Die-stacking technology allows high bandwidth and large capacity DRAM to be
 integrated close to the processor. Using this memory as shared cache brings
