updated ics publication

--- a/resume_ic.tex
+++ b/resume_ic.tex
@@ -125,13 +125,17 @@ July 2006 & \textbf{B P Indian Public School}, Malleshwaram, Bangalore, India\\
 %	Publications
 %----------------------------------------------------------------------------------------
 \section{Publications}
+\textbf{A Practical Tile Size Selection Model for Affine Loop Nests} \\
+\small{Kumudha Naraimshan, Aravind Acharya, Abhinav Baid, Uday Bondhugula} \\
+\small{ACM International Conference on Supercomputing (ICS) 2021}
+
 \textbf{Cross-Platform Performance Portability of DNN Models using SYCL} \\
 \small{Mehdi Goli, Kumudha Naraimshan, Ruyman Reyes et. al.} \\
 \small{ Performance, Portability, and Productivity in HPC Forum (P3HPC) @ Supercomputing (SC) 2020}
 
 \textbf{Optimizing Geometric Multigrid Method Computation using a DSL Approach}\\
 \small{Vinay Vasista, Kumudha KN, Siddharth Bhat, Uday Bondhugula} \\
-\small{SuperComputing (SC) 2017, The Intl. Conf. for High Performance Computing, Networking, Storage and Analysis. \\ } \\
+\small{SuperComputing (SC) 2017, The Intl. Conf. for High Performance Computing, Networking, Storage and Analysis. } \\
 
 
 \textbf{An Empirical Comparative Study and Optimization of the Hadoop Scheduler} \\
@@ -187,8 +191,7 @@ effective optimization and parallelization support (performance) is thus
 valuable. Technologies used: C/C++, python and pgfplot.\\
 & \\
 & \\
-& \textbf{Optimizing Dense Matrix Computations with Polymage } \\
-& \hspace{25em} \textbf{[Under Submission]}\\
+& \textbf{Optimizing Dense Matrix Computations with Polymage } \hspace{5em} \textbf{[Masters Thesis]}\\
 & \setlength{\leftskip}{0.4cm}
 Matrix computations constitute an important part in domains like digital signal
 processing, scientific computing, media processing and many others. A Domain
